--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/Rotimi-Best/attendance-bot/issues"
   },
-  "homepage": "https://github.com/Rotimi-Best/attendance-bot#readme"
+  "homepage": "https://github.com/Rotimi-Best/attendance-bot#readme",
+  "dependencies": {
+    "dotenv": "^6.1.0",
+    "googleapis": "^35.0.0",
+    "nedb-promises": "^3.0.2",
+    "telegraf": "^3.25.0"
+  }
 }
