--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A telegram bot that takes and stores attendance",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,9 @@
     "dotenv": "^6.1.0",
     "googleapis": "^35.0.0",
     "nedb-promises": "^3.0.2",
-    "telegraf": "^3.25.0"
+    "telegram-node-bot": "^4.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
