--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "googleapis": "^35.0.0",
+    "mongoose": "^5.3.14",
     "nedb-promises": "^3.0.2",
+    "nodemon": "^1.18.7",
     "telegram-node-bot": "^4.0.5"
   }
 }
