--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "dotenv": "^6.1.0",
     "googleapis": "^35.0.0",
     "mongoose": "^5.3.14",
+    "mongoose-timestamp": "^0.6.0",
     "nedb-promises": "^3.0.2",
     "nodemon": "^1.18.7",
-    "telegram-node-bot": "^4.0.5",
-    "mongoose-timestamp": "^0.6.0"
+    "telegram-node-bot": "^4.0.5"
   }
 }
